test/errors/segment_overlap1.input.asm

!segment code(start=$1000, end=$11ff)
!segment data(start=$1150, end=$2000) ; overlaps, should give error right away
